crates/mtree2/tests/snapshots/snapshots__invalid_double_filename.snap
---
source: crates/mtree2/tests/snapshots.rs
expression: entries
---
[
    Err(
        Parser(
            ParserError(
                "Could not parse \"filename2.txt\" as a valid mtree field",
            ),
        ),
    ),
]
