crates/mtree2/tests/snapshots/snapshots__not_unicode.snap
---
source: crates/mtree2/tests/snapshots.rs
expression: entries
---
[
    Ok(
        Entry {
            path: ".",
            params: Params {
                checksum: None,
                device: None,
                contents: None,
                flags: Some(
                    [
                        110,
                        111,
                        110,
                        101,
                    ],
                ),
                gid: Some(
                    1000,
                ),
                gname: None,
                ignore: false,
                inode: None,
                link: None,
                md5: None,
                mode: Some(
                    FileMode {
                        mode: 509,
                    },
                ),
                nlink: Some(
                    5,
                ),
                no_change: false,
                optional: false,
                resident_device: None,
                rmd160: None,
                sha1: None,
                sha256: None,
                sha384: None,
                sha512: None,
                size: Some(
                    4096,
                ),
                time: Some(
                    SystemTime {
                        tv_sec: 1457644509,
                        tv_nsec: 817998120,
                    },
                ),
                file_type: Some(
                    Directory,
                ),
                uid: Some(
                    1000,
                ),
                uname: None,
            },
        },
    ),
    Ok(
        Entry {
            path: "./this_is_not_valid_unicode:_fo\x80o _",
            params: Params {
                checksum: None,
                device: None,
                contents: None,
                flags: Some(
                    [
                        110,
                        111,
                        110,
                        101,
                    ],
                ),
                gid: Some(
                    1000,
                ),
                gname: None,
                ignore: false,
                inode: None,
                link: None,
                md5: None,
                mode: Some(
                    FileMode {
                        mode: 420,
                    },
                ),
                nlink: Some(
                    1,
                ),
                no_change: false,
                optional: false,
                resident_device: None,
                rmd160: None,
                sha1: None,
                sha256: None,
                sha384: None,
                sha512: Some(
                    [
                        126,
                        253,
                        56,
                        204,
                        149,
                        123,
                        83,
                        227,
                        213,
                        171,
                        210,
                        94,
                        157,
                        249,
                        189,
                        231,
                        21,
                        165,
                        225,
                        141,
                        193,
                        138,
                        191,
                        168,
                        240,
                        192,
                        234,
                        169,
                        188,
                        160,
                        253,
                        163,
                        47,
                        170,
                        212,
                        151,
                        43,
                        212,
                        217,
                        181,
                        85,
                        39,
                        15,
                        163,
                        179,
                        185,
                        46,
                        106,
                        30,
                        151,
                        173,
                        30,
                        59,
                        255,
                        241,
                        79,
                        201,
                        51,
                        40,
                        64,
                        4,
                        247,
                        232,
                        211,
                    ],
                ),
                size: Some(
                    12288,
                ),
                time: Some(
                    SystemTime {
                        tv_sec: 1457644483,
                        tv_nsec: 833957552,
                    },
                ),
                file_type: Some(
                    File,
                ),
                uid: Some(
                    1000,
                ),
                uname: None,
            },
        },
    ),
]
